<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:theme="@style/ProductDetailsTheme">

    <com.raddyr.core.ui.components.MyToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarTitle="@string/product_details"
        app:menu="@menu/product_edit_menu"/>

    <RelativeLayout
        android:id="@+id/notFoundProductContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_large"
            android:src="@drawable/dontbesad" />

        <TextView
            android:id="@+id/info"
            style="@style/MainTextPrimaryLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sadImage"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:text="@string/product_not_found_info"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/manualAddProductButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/manual_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/scanButtonAfterError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/manualAddProductButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_large"
            android:width="200dp"
            android:text="@string/scan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/errorScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/errorLabel"
            style="@style/MainTextPrimaryLargeBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:text="@string/something_wrong"
            app:layout_constraintBottom_toTopOf="@id/reloadButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/reloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:theme="@style/ProductListTheme"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="@dimen/spacing_bigger"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large_half">

            <ImageView
                android:id="@+id/image"
                android:layout_width="90dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/image" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/progress_bar"
                android:indeterminateDuration="@android:integer/config_longAnimTime"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/image"/>

            <TextView
                android:id="@+id/nameLabel"
                style="?productName"
                android:layout_width="0dp"
                android:textAlignment="center"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="@id/image"
                tools:text="Keczup" />

            <TextView
                android:id="@+id/brandLabel"
                style="?brandName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/nameLabel"
                tools:text="Kotlin" />

            <TextView
                android:id="@+id/categoryLabel"
                style="?category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/brandLabel"
                tools:text="Kategoria: produkty spożywcze" />


            <TextView
                android:id="@+id/totalQuantityLabel"
                style="?category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/categoryLabel"
                tools:text="Ilość: 500G" />

            <TextView
                android:id="@+id/priceLabel"
                style="?category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/totalQuantityLabel"
                tools:text="Proponowana cena: 6 zł" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCard2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_small"
        android:theme="@style/ProductListTheme"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="@dimen/spacing_bigger"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/buttonFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialCard">

        <LinearLayout
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_large"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/buttonFirst"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/change_quantity"
        android:textSize="@dimen/font_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonSecond"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:width="140dp"
        android:text="@string/delete"
        android:textSize="@dimen/font_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkbox"
        app:layout_constraintStart_toEndOf="@id/buttonFirst" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSecond"
        app:layout_constraintTop_toTopOf="@id/buttonSecond" />

    <TextView
        android:id="@+id/checkboxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared"
        app:layout_constraintBottom_toTopOf="@id/checkbox"
        app:layout_constraintEnd_toEndOf="@id/checkbox"
        app:layout_constraintStart_toStartOf="@id/checkbox" />

    <androidx.constraintlayout.widget.Group
        android:visibility="gone"
        android:id="@+id/checkboxGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="checkbox, checkboxLabel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/buttonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="buttonFirst, buttonSecond"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/contentContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="materialCard,materialCard2" />

</androidx.constraintlayout.widget.ConstraintLayout>